# DTE-3607-Advanced-Game-and-Simulator-Programming

./: .clang-format  .gitlab-ci.yml  CMakeLists.txt  Data.xlsx
apps/demo/: CMakeLists.txt  galtondatageneration.cpp  guiapplication.cpp  guiapplication.h  limitedplanegeometry.cpp  limitedplanegeometry.h  main.cpp  qmlapi.cpp  qmlapi.h  qtquickcontrols2.conf  scenariolistmodel.cpp  scenariolistmodel.h  scenariomodel.cpp  scenariomodel.h  scenariowrapper.h  scenariowrapper_private.h  simulationcontroller.cpp  simulationcontroller.h  simulationloopworker.cpp  simulationloopworker.h  types.h
apps/demo/resources/qml/: main.qml
apps/demo/resources/qml/components/: BlenderIconImage.qml
apps/demo/resources/qml/gui/: ApplicationWindowFooterToolBar.qml  ApplicationWindowHeaderToolBar.qml  CustomView3D.qml  ScenarioListModelViewOverlay.qml  WorkSpace01.qml  WorkSpace02.qml  WorkSpace03.qml
apps/demo/resources/qml/scenes/: DefaultCameras.qml  DefaultLighting.qml  ScenarioModelView01.qml  ScenarioModelView02.qml  Scene01.qml  Scene02.qml  Scene03.qml
apps/demo/resources/shaders/quick3d_custommaterial_example/: material_distortion.vert
libs/coldet/: CMakeLists.txt
libs/coldet/include/coldet/bits/: rigidbodies.h  rigidbodies.h.orig  scenario_fixtures.h  types.h  types.h.orig
libs/coldet/include/coldet/concepts/: rigidbody_concepts.h  scenario_fixture_concepts.h
libs/coldet/include/coldet/mechanics/: compute_trajectory.h  sphere_vs_fixed_plane_detection.h  sphere_vs_fixed_plane_response.h  sphere_vs_sphere_detection.h  sphere_vs_sphere_response.h
libs/coldet/include/coldet/mysolvers/: limited_planes.h  limited_planes_data.h  limited_planes_performance.h  limited_planes_timer.h  limited_planes_timer_data.h  myfirstsolvers.h  rolling.h
libs/coldet/include/coldet/solver_development/: step0.h  step1.h  step2.h  step3a.h  step3b.h  step4.h  testing_solvers.h
libs/coldet/include/coldet/utils/: Instrumentor.h  energy_computations.h  scenario_factories.h  scenario_factories.h.orig  state_computations.h  to_string.h  type_conversion.h
testing/unittests/: CMakeLists.txt
testing/unittests/my/: unit_hello_mechanics.cpp  unit_hello_mysolvers.cpp
testing/unittests/predef/: predef_mech_compute_trajectory.cpp  predef_mech_sp_vs_fpl_detection.cpp  predef_mech_sp_vs_fpl_response.cpp  predef_mech_sp_vs_sp_detection.cpp  predef_mech_sp_vs_sp_response.cpp  predef_solver_dev_step1.cpp  predef_solver_dev_step2.cpp  predef_solver_dev_step3a.cpp  predef_solver_dev_step3b.cpp
